--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sharp": "^0.32.6",
-    "swiper": "^11.0.3"
+    "swiper": "^11.0.3",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
