--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "flowbite": "^2.1.1",
     "framer-motion": "^12.5.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "sharp": "^0.32.6",
-    "swiper": "^11.0.3",
-    "tailwind": "^4.0.0"
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
