--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/dotenv": "^8.2.3",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.5.0",
     "next": "15.3.1",
     "react": "19.1.0",
