--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/dotenv": "^8.2.3",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.5.0",
     "next": "15.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
